--- a/app/src/assets/scss/_navigation.scss
+++ b/app/src/assets/scss/_navigation.scss
@@ -1,34 +1,37 @@
 .site-navigation{
-    height: 65px;
+    height: 100px;
     width: 100%; 
-    background: white; 
-    display: flex; 
-    justify-content: space-between;
+    //max-width: 1024px;
+    background: #FEFFFF ;
     color: $text-color;
+    margin: 0 auto;
+    overflow-x: auto;
 
-    span{
-        font-size: 20px;
-        display:flex;
-        font-weight: 500;
-        align-items: center;
+    .menu-title{
         margin-left: 30px;
+
     }
 
+ 
+
     ul{
-        height: 100%; 
-        margin-block-start: 0;
-        margin-right: 0;
-        padding-bottom: 0;
+        padding: 0;
         display: flex;
-        align-items: center;
+        justify-content: space-between;
         list-style-type: none;
-        margin-right: 20px;
+        padding-top:10px;
+       
+        
+        
 
         a {
             text-decoration: none;
-            padding: 0 12px 0 12px; 
-            font-size: 20px;
+            font-size: 35px;
             color: $text-color;
+            font-family: 'Poppins', sans-serif;
+            padding-left: 70px;
+            padding-right: 70px;
+           
 
             &:hover {
                 color:$text-link;
