--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -6,6 +6,6 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     margin: 0;
-    background-color: #f8f9f8;
+    background-color: #FEFFFF;
 }
 
