--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -1,5 +1,9 @@
 @import './_variables';
 @import './navigation'; 
+@import './blog';
+@import './masonry-post';
+@import './post-masonry';
+
 
 
 body{
@@ -9,3 +13,22 @@ body{
     background-color: #FEFFFF;
 }
 
+.container{
+    max-width: 1200px; 
+    margin: 0 auto;
+}
+
+.row{
+    margin: 4em 20px;
+}
+
+.overlay::before{
+    z-index: 1;
+    content:'';
+    position: absolute;
+    top:0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(180deg, transparent 0%, transparent 18%, rgba(0,0,0,0.8) 99%, rgba(0,0,0,0.8) 100%);
+}
