fixed look of blog sections and added use effects

--- a/app/src/assets/scss/_masonry-post.scss
+++ b/app/src/assets/scss/_masonry-post.scss
@@ -9,6 +9,7 @@
     text-decoration: none;
     margin: 0 auto;
     min-height: 200px;
+    background-color: #F8F8F8;
     
     .image-text{
         height: 100%;
