--- a/app/src/assets/scss/_blog.scss
+++ b/app/src/assets/scss/_blog.scss
@@ -1,12 +1,16 @@
 .home{
+    
     h1{
-        width: '100%';
         color: $text-color;
+        font-size: 40px;
     }
     .featured-posts-container{
+        padding: 4em 0 0;
         display: flex;
+
     }
 
+   
 }
 
 @media screen and (max-width : 900px){
