--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -12,16 +12,27 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     margin: 0;
-    background-color: #FEFFFF;
+    padding-bottom: 0;
+
 }
 
 .container{
     max-width: 1200px; 
     margin: 0 auto;
+    background-color: #f8f8f8;
+    padding-bottom: 10;
+   
 }
 
 .row{
     margin: 4em 20px;
+    margin-top: 0;
+
+}
+.row-top{
+    margin: 4em 20px;
+
+
 }
 
 .overlay::before{
