--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -5,14 +5,18 @@
 @import './post-masonry';
 @import './tag-row';
 @import './post-grid';
-
-
+@import'./_home.scss';
+body{
+    max-width: 100%;
+    
+}
 
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     margin: 0;
     padding-bottom: 0;
+    overflow-x: hidden;
 
 }
 
@@ -31,8 +35,6 @@ body{
 }
 .row-top{
     margin: 4em 20px;
-
-
 }
 
 .overlay::before{
@@ -45,3 +47,8 @@ body{
     left: 0;
     background: linear-gradient(180deg, transparent 0%, transparent 18%, rgba(0,0,0,0.8) 99%, rgba(0,0,0,0.8) 100%);
 }
+
+.home{
+    
+}
+
