--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -8,6 +8,7 @@
 @import'./_home.scss';
 @import'./_faq.scss';
 @import'./_resources.scss';
+@import'./_welcome.scss';
 body{
     max-width: 100%;
     
