--- a/app/src/assets/scss/_welcome.scss
+++ b/app/src/assets/scss/_welcome.scss
@@ -1,89 +1,128 @@
-/* resets */
-body { margin:0px; padding-top:70px; }
 
-/* main */
+* {
+	margin: 0;
+	
+	box-sizing: border-box;
+}
 
-.header-banner {
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #EEE;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
 
 
-    background-image: url(../images/header_welcome.png);;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+
+.title {
+	color:black;
+	font-size: 40px;
+	font-weight: 400;
+	text-align: center;
+	opacity: 60%;
+	padding: 0;
+	margin: 0;
+	
+}
+
+.subtitle{
+	color:black;
+	font-size: 18px;
+	padding-left: 170px;
+	opacity: 25%;
+}
+
+.welcome {
+	width: 100%;
+	max-width: 768px;
+	margin: 0 auto;
+    padding-top: 150px;
+
+    img{
+        padding-left: 5px;
+    }
+    
+	
+	
+}
+.author{
+      
+    padding-left: 10px;
+    color: #6E3335;
+    font-size: 20px;
+}
+
+.date{
+    font-size: 18px;
+    padding-top: 20px;
+    opacity: 35%;
+}
+.article{
+    padding-top: 50px;
+    font-size: 15px;
+}
+
+.footing{
+    position: absolute;
+
+    text-align: center;
+    font-family: 'Staatliches', cursive;
     width: 100%;
-    height: 300px;
-    margin:50px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    a{
+    font-size: 170px;
+    padding-left: 50px;
+    letter-spacing: 80px;
+    color:#ecf0f1;
+    }
+.footerend  {
+
+align-items:center;
+    font-size: 12px;
+    position: relative;
+    font-family: 'Helvetica', sans-serif;
+    text-align: justify;
     padding-right: 50px;
     text-align: center;
-}
+    .social-container{
+        position: absolute;
+    }
+   h2{
+       position: absolute;
+       font-weight: bold;
+       color: black;
+       padding-left: 900px;
+       padding-top: 40px;
+       font-size: 20px;
+   }
+   .p1{
+       position: absolute;
+       padding-left: 800px;
+       padding-top: 85px;
+       font-size: 15px;
 
-header h1 {
-
-    color: black;
-    padding: 0 1rem;
+   }
+   .p2{
     position: absolute;
-   top: 430px;
-    left: 420px;
-    font-family: 'Staatliches';
-    opacity: 40%;
-    font-size: 40px;
+    padding-left: 650px;
+    padding-top: 220px;
+    color: #bdc3c7;
+       
+   }
+
+    .copyright{
+    left:570px;
+    position: absolute;
+    padding-top: 70px;
     
-}
-
-
-
-
-
-.visible-title {
-    visibility: visible;
-}
-
-
-
-/* demo content */
-body { 
-    color: #292f36;
-    font-family: helvetica;
-    line-height: 1.6;
-    align-items: center;
-    
-}
-.content{ 
-    margin: 0 auto;
-    padding: 4rem 0;
-    width: 960px;
-    max-width: 100%;
-}
-article {
-    float: left;
-    width: 720px;
-}
-article p:first-of-type {
-    margin-top: 0;
-}
-aside {
-    float: right;
-    width: 120px;
-}
-p img {
-    max-width: 100%;
-}
-
-@media only screen and (max-width: 960px) {
-    .content{ 
-        padding: 2rem 0;
     }
-    article {
-        float: none;
-        margin: 0 auto;
-        width: 96%;
-    }
-    article:last-of-type {  
-        margin-bottom: 3rem;
-    }
-    aside {  
-        float: none;
-        text-align: center;
-        width: 100%;
-    }
-}
+
+}}
