Added Ledger's articles and fixed production build look issues - need to finish making mobile responsive

--- a/app/src/assets/scss/_welcome.scss
+++ b/app/src/assets/scss/_welcome.scss
@@ -26,7 +26,7 @@ code {
 	font-size: 40px;
 	font-weight: 400;
 	text-align: center;
-	opacity: 60%;
+	color:rgb(102,102,102);
 	padding: 0;
 	margin: 0;
 	
@@ -36,7 +36,7 @@ code {
 	color:black;
 	font-size: 18px;
 	padding-left: 170px;
-	opacity: 25%;
+	color: rgb(193,193,193);
 }
 
 .welcome {
@@ -62,7 +62,7 @@ code {
 .date{
     font-size: 18px;
     padding-top: 20px;
-    opacity: 35%;
+    color: rgb(197, 197, 197);
 }
 .article{
     padding-top: 50px;
