--- a/app/src/assets/scss/_faq.scss
+++ b/app/src/assets/scss/_faq.scss
@@ -22,22 +22,20 @@ code {
 
 
 .questions {
-	color:black;
+	color:rgb(153, 153, 153);
 	font-size: 100px;
 	font-weight: 300;
 	font-family: 'Staatliches', cursive;
 	text-align: center;
-	opacity: 40%;
 	padding: 0;
 	margin: 0;
 	
 }
 
 .answers{
-	color:black;
+	color:rgb(192, 192, 192);
 	font-size: 25px;
 	padding-left: 285px;
-	opacity: 25%;
 }
 
 .faqs {
