--- a/app/src/assets/scss/_home.scss
+++ b/app/src/assets/scss/_home.scss
@@ -1,10 +1,8 @@
 
 
-.home{
-   
 .home-title{
     
-    padding-top: 80px;
+    padding-top: 5.5%;
     padding-left: 0px;
     font-family: 'Staatliches', cursive;
     line-height: 1.45;
@@ -74,12 +72,16 @@
         z-index: 1;
         left:130px;
         position: absolute;
+        width: 35%;
+        height: auto;
     }
     .backImage2{
         z-index: 1;
         top:380px;
         left:820px;
         position: absolute;
+        width: 35%;
+        height: auto;
     }
 
     .genInfo{
@@ -146,7 +148,7 @@
         color:#ecf0f1;
         padding-left: 30px;
         z-index: 1;
-        opacity: 70%;
+        color:rgb(242, 242, 245)
         }
         iframe{
         top:245px;
@@ -167,19 +169,20 @@
         width: 100%;
         margin-bottom: 0px;
         padding-bottom: 0px;
-        a{
+        .a{
         font-size: 170px;
         padding-left: 50px;
         letter-spacing: 80px;
         color:#ecf0f1;
         z-index: 1; 
-        opacity: 70%;
+        color: rgb(242, 242, 245);
+        margin: 0;
     }
     img{
         position: absolute;
 
         z-index:2;
-        top:300px;
+        top:380px;
         right:210px;
   
 
@@ -194,11 +197,13 @@
             padding-bottom: 30px;
             .hotspottitle{
             color: white;
-            opacity: 100%;
+         
             //letter-spacing: 20px;
             padding-left: 50px;
             font-family: 'Staatliches', cursive;
             font-size: 120px;
+            padding-bottom: 0;
+            margin: 0;
 
                 }
         }
@@ -210,18 +215,35 @@
             background-size: cover;
             text-align: center;
             list-style-type: none;
-            a{
+            .check{
             color: white;
-            opacity: 100%;
+           
             letter-spacing: 10px;
             font-family: 'Staatliches', cursive;
             font-size: 70px;
             padding-top: 20px;
+
+            .bloglink{
+                text-decoration: none;
+                padding: 0;
+                margin:0;
+                cursor:pointer;
+                font-size:80px;
+                padding-left: 30px;
+                letter-spacing: 20px;
+
+                
+
+            }
+            .bloglink:hover { color: $text-link; }
+            
+
+           
             }
             .paragraph{
 
-            padding: 30px;
            font-size: 20px;
+           padding-bottom: 30px;
            color:white;
            font-family: 'Helvetica', sans-serif;
            text-align: justify;
@@ -230,15 +252,6 @@
        
               
             }
-            .bloglink{
-                text-decoration: none;
-      
-                cursor:pointer
-
-                
-
-            }
-            .bloglink:hover { color: $text-link; }
             
          
         }
@@ -256,15 +269,19 @@
 }
 
 
-}
+
 .footers{
     position: absolute;
-    top:3700px;
+    top:3850px;
     text-align: center;
     font-family: 'Staatliches', cursive;
     width: 100%;
     margin-bottom: 0px;
     padding-bottom: 0px;
+
+    @media (max-height:800px){
+      
+    }
     a{
     font-size: 170px;
     padding-left: 50px;
@@ -272,6 +289,7 @@
     color:#ecf0f1;
     }
 .footerend  {
+
     width: 100%;
     align-items:center;
     font-size: 12px;
