--- a/app/src/assets/scss/_resources.scss
+++ b/app/src/assets/scss/_resources.scss
@@ -27,17 +27,17 @@ code {
 	font-weight: 300;
 	font-family: 'Staatliches', cursive;
 	text-align: center;
-	opacity: 40%;
+	color: rgb(153,153,153);
 	padding: 0;
 	margin: 0;
 	
 }
 
 .answers{
-	color:black;
+	color:rgb(192, 192, 192);
 	font-size: 25px;
 	padding-left: 285px;
-	opacity: 25%;
+
 }
 
 .faqs {
