--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -11,7 +11,7 @@
 @import'./_welcome.scss';
 body{
     max-width: 100%;
-    
+    background-color: white;
 }
 
 body{
@@ -20,6 +20,7 @@ body{
     margin: 0;
     padding-bottom: 0;
     overflow-x: hidden;
+    background-color: white;
 
 }
 
