--- a/app/src/assets/scss/_home.scss
+++ b/app/src/assets/scss/_home.scss
@@ -1,5 +1,7 @@
 
-
+.home{
+    overflow-x: visible;
+}
 .home-title{
     
     padding-top: 5.5%;
@@ -13,56 +15,72 @@
 
     .engfrosh{
         font-size: 170px;
-        letter-spacing: 200px;
+        letter-spacing: 1.1em;
         color: white;
         z-index: 2;
         position: absolute;
-        top: 100px;
-        left: 150px;
+        top: 0.5em;
+        left: 1em;
+
+        @media only screen and (max-width: 1000px) {
+            left: 1em;
+            top:1.5em;
+          }
     }
     .engfrosh12{
         font-size: 170px;
-        letter-spacing: 200px;
+        letter-spacing: 1.1em;
         color: black;
         z-index: 2;
         position: absolute;
-        left: 520px;
+        left: 3.1em;
     }
     .engfrosh2{
         font-size: 170px;
-        letter-spacing: 200px;
+        letter-spacing: 1.1em;
         color: white;
         z-index: 2;
         position: absolute;
-        top: 355px;
-        left: 150px;
+        top: 1.9em;
+        left: 1em;
+        @media only screen and (max-width: 1000px) {
+            left: 1em;
+            top:3em;
+          }
     }
     .engfrosh22{
         font-size: 170px;
-        letter-spacing: 200px;
+        letter-spacing: 1.1em;
         color: black;
         z-index: 2;
         position: absolute;
-        top: 0px;
-        left: 520px;
+        top: 0em;
+        left: 3.1em;
     }
     .engfrosh3{
         font-size: 170px;
-        letter-spacing: 200px;
+        letter-spacing: 1.1em;
         color: black;
         z-index: 2;
         position: absolute;
-        top: 600px;
-        left: 150px;
+        top: 3.3em;
+        left: 1em;
+        @media only screen and (max-width: 1000px) {
+            left: 1em;
+            top:4.5em;
+            
+          }
+
     }
     .engfrosh32{
         font-size: 170px;
-        letter-spacing: 200px;
+        letter-spacing: 0.8em;
         color: white;
         z-index: 2;
         position: absolute;
         top: 0px;
-        left: 800px;
+        left: 4.4em;
+     
    
   
     }
@@ -70,23 +88,36 @@
 
     .backImage{
         z-index: 1;
-        left:130px;
+        left:8em;
         position: absolute;
         width: 35%;
         height: auto;
+        @media only screen and (max-width: 1000px) {
+            left: 2em;
+            top:5em;
+            width: 36%;
+     
+          }
+
     }
     .backImage2{
         z-index: 1;
-        top:380px;
-        left:820px;
+        top:25em;
+        left:58em;
         position: absolute;
         width: 35%;
         height: auto;
+        @media only screen and (max-width: 800px) {
+            left: 17em;
+            top:10em;
+            width:35%
+       
+          }
     }
 
     .genInfo{
         position: absolute;
-        top:980px;
+        top:70em;
         text-align: left;
         font-family: 'Staatliches', cursive;
         width: 100%;
@@ -95,67 +126,94 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        @media only screen and (max-width: 800px) {
+    
+            top:22em;
+            width:100%
+       
+          }
 
     
        .a1{
            text-align: left;
-           font-size: 100px;
+           font-size: 7vw;
            color: white;
-           padding-left: 50px;
-           letter-spacing: 42px;
+           padding-left: 0.5em;
+           letter-spacing: 0.42em;
           
        }
        .a2{
         text-align: center;
-        font-size: 100px;
+        font-size: 7vw;
         color: white;
-        padding-left: 150px;
-        letter-spacing: 20px;
+        padding-left: 1.5em;
+        letter-spacing: 0.2em;
 
        
     }
     .a3{
         text-align: left;
-        font-size: 100px;
+        font-size: 7vw;
         color: white;
-        padding-left: 50px;
-        letter-spacing: 20px;
+        padding-left: 0.5em;
+        letter-spacing: 0.2em;
        
     }
 
        .paragraph{
            position: absolute;
-           top: 120px;
-           left: 400px;
-           font-size: 18px;
+           top: 4em;
+           left: 20em;
+           font-size: 1.5vw;
            color:white;
            font-family: 'Helvetica', sans-serif;
            text-align: justify;
-           padding-right: 50px;
+           padding-right: 0.8em;
+
        }
     }
 
     .themereveal{
         position: relative;
-        top:1160px;
+        top:82em;
         text-align: center;
         width: 100%;
+        @media only screen and (max-width: 800px) {
+    
+            top:23em;
+   
+       
+          }
+
         .theme{
         font-family: 'Staatliches', cursive;
-        font-size: 550px;
-        letter-spacing: 40px;
+        font-size: 40vw;
+        letter-spacing: 0.05em;
         position: absolute;
-        color:#ecf0f1;
-        padding-left: 30px;
+        color:#252b2c;
+        padding-left: 0.05em;
         z-index: 1;
         color:rgb(242, 242, 245)
         }
         iframe{
-        top:245px;
-           right:320px;
+        top:19em;
+           right:28em;
             z-index:2;
             position: absolute;
+            @media only screen and (max-width: 800px) {
+    
+                top:4.3em;
+                width:23em;
+                height:12em;
+                right:5em;
+                left:2em
+                
+
+       
+           
+              }
         }
+       
     }
 
     
@@ -163,16 +221,25 @@
 
     .sponsor{
         position: absolute;
-        top:1958px;
+        top:140em;
         text-align: center;
         font-family: 'Staatliches', cursive;
         width: 100%;
         margin-bottom: 0px;
         padding-bottom: 0px;
+        @media only screen and (max-width: 800px) {
+    
+            top:46em
+            
+
+   
+       
+          }
+
         .a{
-        font-size: 170px;
-        padding-left: 50px;
-        letter-spacing: 80px;
+        font-size: 12vw;
+        padding-left: 0.5em;
+        letter-spacing: 0.5em;
         color:#ecf0f1;
         z-index: 1; 
         color: rgb(242, 242, 245);
@@ -182,8 +249,14 @@
         position: absolute;
 
         z-index:2;
-        top:380px;
-        right:210px;
+        top:28em;
+        right:17em;
+        @media only screen and (max-width: 800px) {
+        width:75%;
+        top:6.5em;
+        right:3.5em;
+       
+          }
   
 
     }
@@ -194,17 +267,24 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            padding-bottom: 30px;
+            padding-bottom: 0.3em;
             .hotspottitle{
             color: white;
          
             //letter-spacing: 20px;
-            padding-left: 50px;
+
             font-family: 'Staatliches', cursive;
-            font-size: 120px;
+            font-size: 10vw;
             padding-bottom: 0;
             margin: 0;
 
+                }
+                iframe{
+                    @media only screen and (max-width: 800px) {
+                        width:75%;
+                       
+                       
+                          }
                 }
         }
         .blog{
@@ -218,19 +298,19 @@
             .check{
             color: white;
            
-            letter-spacing: 10px;
+            letter-spacing: 0.1em;
             font-family: 'Staatliches', cursive;
-            font-size: 70px;
-            padding-top: 20px;
+            font-size: 5.5vw;
+            padding-top: 0.2em;
 
             .bloglink{
                 text-decoration: none;
                 padding: 0;
                 margin:0;
                 cursor:pointer;
-                font-size:80px;
-                padding-left: 30px;
-                letter-spacing: 20px;
+                font-size:5.5vw;
+                padding-left: 0.3em;
+                letter-spacing: 0.2em;
 
                 
 
@@ -242,8 +322,8 @@
             }
             .paragraph{
 
-           font-size: 20px;
-           padding-bottom: 30px;
+           font-size: 1.8vw;
+           padding-bottom: 0.6em;
            color:white;
            font-family: 'Helvetica', sans-serif;
            text-align: justify;
@@ -272,31 +352,30 @@
 
 .footers{
     position: absolute;
-    top:3850px;
+    top:273em;
     text-align: center;
     font-family: 'Staatliches', cursive;
     width: 100%;
     margin-bottom: 0px;
     padding-bottom: 0px;
 
-    @media (max-height:800px){
-      
+    @media only screen and (max-width: 800px){
+      top:106em;
     }
     a{
-    font-size: 170px;
-    padding-left: 50px;
-    letter-spacing: 80px;
+    font-size: 12vw;
+    padding-left: 0.5em;
     color:#ecf0f1;
     }
 .footerend  {
 
     width: 100%;
     align-items:center;
-    font-size: 12px;
+    font-size: 0.8vw;
     position: relative;
     font-family: 'Helvetica', sans-serif;
     text-align: justify;
-    padding-right: 50px;
+    padding-right: 0.5em;
     text-align: center;
     .social-container{
         position: absolute;
@@ -305,21 +384,21 @@
        position: absolute;
        font-weight: bold;
        color: black;
-       padding-left: 900px;
-       padding-top: 40px;
-       font-size: 20px;
+       padding-left: 48em;
+       padding-top: 2em;
+       font-size: 1.5vw;
    }
    .p1{
        position: absolute;
-       padding-left: 800px;
-       padding-top: 85px;
-       font-size: 15px;
+       padding-left: 75em;
+       padding-top: 8em;
+       font-size: 0.9vw;
 
    }
    .p2{
     position: absolute;
-    padding-left: 650px;
-    padding-top: 220px;
+    padding-left: 60em;
+    padding-top: 20em;
     color: #bdc3c7;
        
    }
