--- a/app/src/assets/scss/_faq.scss
+++ b/app/src/assets/scss/_faq.scss
@@ -21,9 +21,9 @@ code {
 
 
 
-.questions {
+.questions{
 	color:rgb(153, 153, 153);
-	font-size: 100px;
+	font-size: 8vw;
 	font-weight: 300;
 	font-family: 'Staatliches', cursive;
 	text-align: center;
@@ -34,25 +34,30 @@ code {
 
 .answers{
 	color:rgb(192, 192, 192);
-	font-size: 25px;
-	padding-left: 285px;
+	font-size: 2vw;
+	padding-left: 9.2em;
+	@media only screen and (max-width: 800px){
+
+		padding-left: 20.5em;
+	  }
+
 }
 
 .faqs {
 	width: 100%;
 	max-width: 768px;
 	margin: 0 auto;
-	padding-top: 500px;
+	padding-top: 5em;
 
 	
 	
 }
 
 .faqs .faq {
-	margin: 15px;
-	padding: 15px;
+	margin: 1.5em;
+	padding: 1.5em;
 	background-color: #FFF;
-	border-radius: 8px;
+	border-radius: 0.8em;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
@@ -101,66 +106,63 @@ code {
 	opacity: 1;
 }
 .end{
+    position: absolute;
+    top:135em;
+    text-align: center;
+    font-family: 'Staatliches', cursive;
+    width: 100%;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 
-	top:0;
-	text-align: center;
-	font-family: 'Staatliches', cursive;
-	width: 100%;
-	margin-bottom: 0px;
-	padding-bottom: 0px;
-	a{
-        font-size: 170px;
-        padding-left: 50px;
-        letter-spacing: 80px;
-        color:#ecf0f1;
+    @media only screen and (max-width: 800px){
+      top:155em;
+    }
+    a{
+    font-size: 12vw;
+    padding-left: 0.5em;
+    color:#ecf0f1;
+    }
+.footerend  {
 
-        
+    width: 100%;
+    align-items:center;
+    font-size: 0.8vw;
+    position: relative;
+    font-family: 'Helvetica', sans-serif;
+    text-align: justify;
+    padding-right: 0.5em;
+    text-align: center;
+    .social-container{
+        position: absolute;
+    }
+   h2{
+       position: absolute;
+       font-weight: bold;
+       color: black;
+       padding-left: 48em;
+       padding-top: 2em;
+       font-size: 1.5vw;
+   }
+   .p1{
+       position: absolute;
+       padding-left: 75em;
+       padding-top: 8em;
+       font-size: 0.9vw;
+
+   }
+   .p2{
+    position: absolute;
+    padding-left: 60em;
+    padding-top: 20em;
+    color: #bdc3c7;
+       
+   }
+
+    .copyright{
+    left:570px;
+    position: absolute;
+    padding-top: 70px;
+    
     }
 
-	.footerend  {
-		width: 100%;
-		align-items:center;
-		font-size: 12px;
-		position: relative;
-		font-family: 'Helvetica', sans-serif;
-		text-align: justify;
-		padding-right: 50px;
-		text-align: center;
-		
-		.social-container{
-			position: absolute;
-		}
-	   h2{
-		   position: absolute;
-		   font-weight: bold;
-		   color: black;
-		   padding-left: 900px;
-		   padding-top: 40px;
-		   font-size: 20px;
-	   }
-	   .p1{
-		   position: absolute;
-		   padding-left: 800px;
-		   padding-top: 85px;
-		   font-size: 15px;
-
-	   }
-	   .p2{
-		position: absolute;
-		padding-left: 650px;
-		padding-top: 220px;
-		color: #bdc3c7;
-		   
-	   }
-
-		.copyright{
-		left:570px;
-		position: absolute;
-		padding-top: 70px;
-		
-		}
-   
-	}
-}
-
-	
+}}
