--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -9,7 +9,12 @@
 @import'./_faq.scss';
 @import'./_resources.scss';
 @import'./_welcome.scss';
-body{
+
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     max-width: 100%;
     background-color: white;
 }
@@ -52,7 +57,65 @@ body{
     background: linear-gradient(180deg, transparent 0%, transparent 18%, rgba(0,0,0,0.8) 99%, rgba(0,0,0,0.8) 100%);
 }
 
-.home{
+.App{
+    position: relative;
+    min-height: 100vh;
     
+}
+.wrapper{
+    padding-bottom: 2.5rem; 
+}
+
+.footer  {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;  
+    align-items:center;
+    font-size: 0.8vw;
+    padding-top: 10em;
+    font-family: 'Helvetica', sans-serif;
+    text-align: justify;
+    padding-right: 0.5em;
+    text-align: center;
+    a{
+        font-size: 12vw;
+        padding-left: 0.5em;
+        color:#ecf0f1;
+        }
+    
+    .social-container{
+        position: absolute;
+    }
+   h2{
+       position: absolute;
+       font-weight: bold;
+       color: black;
+       padding-left: 48em;
+       padding-top: 2em;
+       font-size: 1.5vw;
+   }
+   .p1{
+       position: absolute;
+       padding-left: 75em;
+       padding-top: 8em;
+       font-size: 0.9vw;
+
+   }
+   .p2{
+    position: absolute;
+    padding-left: 60em;
+    padding-top: 20em;
+    color: #bdc3c7;
+       
+   }
+
+    .copyright{
+    left:570px;
+    position: absolute;
+    padding-top: 70px;
+    
+    }
+
 }
 
