--- a/app/src/assets/scss/base.scss
+++ b/app/src/assets/scss/base.scss
@@ -1,13 +1,10 @@
-@import './_variables';
-@import './navigation'; 
+@import './_variables'; 
 @import './blog';
+@import './navigation';
 @import './masonry-post';
 @import './post-masonry';
 @import './tag-row';
 @import './post-grid';
-@import'./_home.scss';
-@import'./_faq.scss';
-@import'./_resources.scss';
 @import'./_welcome.scss';
 
 
@@ -29,10 +26,11 @@ body{
 
 }
 
-.container{
-    max-width: 1200px; 
+ .container{
+//     max-width: 1200px; 
     margin: 0 auto;
-    background-color: #f8f8f8;
+    padding: 2%;
+    background-color: white;
     padding-bottom: 10;
    
 }
@@ -64,58 +62,5 @@ body{
 }
 .wrapper{
     padding-bottom: 2.5rem; 
-}
-
-.footer  {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;  
-    align-items:center;
-    font-size: 0.8vw;
-    padding-top: 10em;
-    font-family: 'Helvetica', sans-serif;
-    text-align: justify;
-    padding-right: 0.5em;
-    text-align: center;
-    a{
-        font-size: 12vw;
-        padding-left: 0.5em;
-        color:#ecf0f1;
-        }
-    
-    .social-container{
-        position: absolute;
-    }
-   h2{
-       position: absolute;
-       font-weight: bold;
-       color: black;
-       padding-left: 48em;
-       padding-top: 2em;
-       font-size: 1.5vw;
-   }
-   .p1{
-       position: absolute;
-       padding-left: 75em;
-       padding-top: 8em;
-       font-size: 0.9vw;
-
-   }
-   .p2{
-    position: absolute;
-    padding-left: 60em;
-    padding-top: 20em;
-    color: #bdc3c7;
-       
-   }
-
-    .copyright{
-    left:570px;
-    position: absolute;
-    padding-top: 70px;
-    
-    }
-
 }
 
