--- a/app/src/assets/scss/_home.scss
+++ b/app/src/assets/scss/_home.scss
@@ -1,160 +1,71 @@
-img{
+@import "/_font.scss";
+
+img {
     width:100%;
     margin:0;
     padding:0;
 }
+
+.title {
+  padding: 1%;
+  padding-top: 2%;
+  font-family: "TopSecret";
+  font-size: 3.5vw;
+  color: black;
+}
+
 iframe{
-    width: 100%;
-    margin:0;
-    padding:0;
+  width: 80%;
+  height: 500px;
+  margin:0;
+  padding:0;
 }
 
-
-
-.clear {
-    clear:both;
-    line-height:0;
-}
-
-
-
-  
-
-
-
-
-
-
-        .genInfo{
-      z-index: 2;
-          background-image: url(../images/redclouds.jpg);
-          background-attachment: fixed;
-          background-position: center;
-          background-repeat: no-repeat;
-          background-size: cover;
-          text-align: center;
-          list-style-type: none;
-          h2{
-            font-size:5.5vw;
-        
-            letter-spacing: 0.2em;
-            color:white;
-            font-family: 'Staatliches', cursive;
-            padding: 0;
-            margin:0;
-          }
-          p{
-            font-size: 1.3vw;
-            padding-bottom: 0.6em;
-            color:white;
-            font-family: 'Helvetica', sans-serif;
-            text-align: justify;
-            
-            
-          }
-      
-         
-      }
-
-
-.check{
-  z-index: 2;
-  background-image: url(../images/redclouds.jpg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.theme-reveal{
   text-align: center;
-  list-style-type: none;
-
-  h2{
-    font-size:5.5vw;
-    padding: 0;
-    margin:0;
-    letter-spacing: 0.2em;
-    color:white;
-    font-family: 'Staatliches', cursive;
-
-  }
-  .bloglink{color:white;
-    text-decoration: none;
-    padding: 0;
-    margin:0;
-    cursor:pointer;
-    font-size:5.5vw;
-    
-    letter-spacing: 0.2em;
-    font-family: 'Staatliches', cursive;
-    .bloglink:hover { color: $text-link }
-
-  }
-  p{
-    font-size: 1.3vw;
-    padding-bottom: 0.6em;
-    color:white;
-    font-family: 'Helvetica', sans-serif;
-    text-align: justify;
-    
-    text-align: center;
-  }
-
+  margin: auto;
 }
 
-
-.check2{
-  background-image: url(../images/background-first.svg);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+.hotspots-map {
   text-align: center;
-  list-style-type: none;
-
-  h2{
-    font-size:5.5vw;
-    padding: 0;
-    margin:0;
-    letter-spacing: 0.2em;
-    color:white;
-    font-family: 'Staatliches', cursive;
-
-  }
-  .bloglink{color:white;
-    text-decoration: none;
-    padding: 0;
-    margin:0;
-    cursor:pointer;
-    font-size:5.5vw;
-    
-    letter-spacing: 0.2em;
-    font-family: 'Staatliches', cursive;
-    .bloglink:hover { color: $text-link }
-
-  }
-  p{
-    font-size: 1.3vw;
-    padding-bottom: 0.6em;
-    color:white;
-    font-family: 'Helvetica', sans-serif;
-    text-align: justify;
-    
-    text-align: center;
-  }
-
+  margin: auto;
 }
-  
- .sponsors{
-  z-index: 2;
-  p{
-    font-family: 'Staatliches', cursive;
-      top:30em;
-      left: 0.5em;
-      letter-spacing: 1.8em;
-      font-size:10vw;
-      position: absolute;
-      margin: 0;
-      padding: 0;
-      color:white;
-  
+
+.homePage{
+  margin-top: 75px;
+  height: 100%;
+}
+
+.genInfo {
+  width: 80%;
+  height: 36.6vw;
+  text-align: center;
+  margin: auto;
+  background-image: url('../images/card-background.svg');
+  background-size: contain;
+
+  .paragraph{
+    font-size: 1.45vw;
+    max-width: 85%;
+    margin: auto;
+    padding-bottom: 0;
   }
- }
+}
+
+  .registration-button{
+    background-color: #be103f;
+    text-align: center;
+    font-family: 'TopSecret';
+    font-size: 3vw;
+    color: white;
+    margin-top: -2.5%;
+    border-style: solid;
+    border-color: #be103f;
+    padding: 5px 20px;
+  }
+
+  .registration-button:hover{
+      background-color: #961235;
+      border-color: #961235;
+      cursor: pointer;
+  }
