--- a/app/src/assets/scss/_navigation.scss
+++ b/app/src/assets/scss/_navigation.scss
@@ -1,9 +1,16 @@
+
+.logo {
+    width: 5vw;
+    position: absolute;
+    left: 10px;
+    top: 7px;
+}
+
 .site-navigation{
     height: 50px;
     width: 100%; 
     //max-width: 1024px;
     background: #FEFFFF ;
-    color: $text-color;
     margin: 0 auto;
     overflow-x: auto;
     position: fixed;
@@ -15,6 +22,7 @@
 
 
     }
+
     .ion-ios-menu{
         font-size: 36px;
         width: 65px;
@@ -37,17 +45,12 @@
             justify-content: space-between;
             list-style-type: none;
             padding-top:10px;
-
-    
-            
-            
             
     
             li {
                 text-decoration: none;
                 font-size: 36px;
-                color: $text-color;
-                font-family: 'Poppins', sans-serif;
+                font-family: 'Montserrat', sans-serif;
                 padding-left: 70px;
                 padding-right: 70px;
      
