--- a/app/src/assets/scss/_resources.scss
+++ b/app/src/assets/scss/_resources.scss
@@ -1,3 +1,4 @@
+@import url('./_font.scss');
 
 * {
 	margin: 0;
@@ -37,148 +38,26 @@ code {
 }
 
 
-.questions2 {
-	color:black;
-	font-size: 100px;
+.resources-title {
+
+	font-size: 45px;
 	font-weight: 300;
-	font-family: 'Staatliches', cursive;
+	font-family: 'TopSecret';
 	text-align: center;
-	color: rgb(153,153,153);
-	padding: 0;
+	color: rgb(90, 90, 90);
+	padding: 2vh;
 	margin: 0;
 	
 }
 
-.answers2{
-	color:rgb(192, 192, 192);
-	font-size: 25px;
-	padding-left: 285px;
-
-}
-
-.faqs {
+.resources {
 	width: 100%;
 	max-width: 768px;
 	margin: 0 auto;
-	padding-top: 80px;
-
-	
-	
+	padding-top: 95px;
+  padding-bottom: 15px;
 }
 
-.faqs .faq {
-	margin: 15px;
-	padding: 15px;
-	background-color: #FFF;
-	border-radius: 8px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-}
 
-.faqs .faq .faq-question {
-	position: relative;
-	font-size: 20px;
-	padding-right: 80px;
-
-	transition: all 0.4s ease;
-}
-
-.faqs .faq .faq-question::after {
-	content: '';
-	position: absolute;
-	top: 50%;
-	right: 0px;
-	transform: translateY(-50%);
-	width: 30px;
-	height: 30px;
-
-	background-image: url('../images/down-arrow.svg');
-	background-position: center;
-	background-size: contain;
-	background-repeat: no-repeat;
-
-	transition: all 0.4s ease-out;
-}
-
-.faqs .faq .faq-answer {
-	opacity: 0;
-	max-height: 0;
-	overflow-y: hidden;
-	transition: all 0.4s ease-out;
-}
-
-.faqs .faq.open .faq-question {
-	margin-bottom: 15px;
-}
-
-.faqs .faq.open .faq-question::after {
-	transform: translateY(-50%) rotate(180deg);
-}
-
-.faqs .faq.open .faq-answer {
-	max-height: 1000px;
-	opacity: 1;
-}
-
-.finish{
-    position: absolute;
-    top:190em;
-    text-align: center;
-    font-family: 'Staatliches', cursive;
-    width: 100%;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-
-    @media only screen and (max-width: 800px){
-      top:465em;
-    }
-    a{
-    font-size: 12vw;
-    padding-left: 0.5em;
-    color:#ecf0f1;
-    }
-.footerend  {
-
-    width: 100%;
-    align-items:center;
-    font-size: 0.8vw;
-    position: relative;
-    font-family: 'Helvetica', sans-serif;
-    text-align: justify;
-    padding-right: 0.5em;
-    text-align: center;
-    .social-container{
-        position: absolute;
-    }
-   h2{
-       position: absolute;
-       font-weight: bold;
-       color: black;
-       padding-left: 48em;
-       padding-top: 2em;
-       font-size: 1.5vw;
-   }
-   .p1{
-       position: absolute;
-       padding-left: 75em;
-       padding-top: 8em;
-       font-size: 0.9vw;
-
-   }
-   .p2{
-    position: absolute;
-    padding-left: 60em;
-    padding-top: 20em;
-    color: #bdc3c7;
-       
-   }
-
-    .copyright{
-    left:570px;
-    position: absolute;
-    padding-top: 70px;
-    
-    }
-
-}}
 
 	
