only sponsors and blog left to update

--- a/app/src/assets/scss/_checkoutTile.scss
+++ b/app/src/assets/scss/_checkoutTile.scss
@@ -3,13 +3,13 @@
 .check-it-out-tile {
     background-color: #920d311c;
     width: 20%;
-    height: 20vw;
     display: inline-block;
     padding: 2%;
     justify-content: center;
     margin: 1%;
     border-radius: 5px;
     font-family: "Montserrat";
+    font-size: 1.45vw;
 
 
     .check-button {
@@ -17,6 +17,7 @@
         padding: 10px 20px;
         margin: 0 auto;
         text-align: center;
+        font-size: 1.45vw;
     }
 
     .check-button:hover {
