--- a/app/src/assets/scss/_navigation.scss
+++ b/app/src/assets/scss/_navigation.scss
@@ -66,6 +66,10 @@
     
 }
 
+.MuiButtonBase-root {
+    color: black;
+}
+
 @media screen and (max-width: 830px){
     .site-navigation{
         .menu-content-container{
